force-app/main/default/objects/MUSW__Object_Ranking_Setting__mdt/MUSW__Object_Ranking_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Object Ranking Setting</label>
    <pluralLabel>Object Ranking Settings</pluralLabel>
</CustomObject>