force-app/main/default/objects/MUSW__Object_Ranking_Setting__mdt/fields/MUSW__Object_Label__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Object_Label__c</fullName>
    <label>Object Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>