force-app/main/default/objects/MUSW__Object_Ranking_Setting__mdt/fields/MUSW__Ranking_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Ranking_Field_Label__c</fullName>
    <label>Ranking Field Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>