force-app/main/default/objects/MUSW__Object_Ranking_Setting__mdt/fields/MUSW__Ranking_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Ranking_Field_Name__c</fullName>
    <inlineHelpText>The unique name used by the API and managed packages. The name must begin with a letter and use only alphanumeric characters and underscores. The name cannot end with an underscore or have two consecutive underscores.</inlineHelpText>
    <label>Ranking Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>